--- a/package.json
+++ b/package.json
@@ -8,11 +8,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.4.0",
-    "vue": "^3.3.0"
+    "vue": "^3.3.0",
+    "axios": "^1.4.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.6.2",
-    "vite": "^5.4.21"
+    "vite": "^5.0.0"
   }
 }
